# rust_ray_tracer_challenge

./: Cargo.toml  package.json
benches/: my_benchmark.rs  tests.txt
images/: chapter_10_2020-04-06-16-13.ppm  chapter_10_2020-04-08-12-06.ppm  chapter_10_2020-04-08-14-43.ppm  chapter_10_2020-04-09-14-28.ppm  chapter_10_2020-04-09-15-13.ppm  chapter_11_2020-04-10-15-42.ppm  chapter_11b_2020-04-14-15-24.ppm  chapter_11b_2020-04-14-15-26.ppm  chapter_11b_2020-04-14-15-29.ppm  chapter_11b_2020-04-14-15-30.ppm  chapter_11b_2020-04-14-16-17.ppm  chapter_11b_2020-04-15-14-00.ppm  chapter_11b_2020-04-15-16-03.ppm  chapter_9_2020-04-05-07-23.ppm  chapter_9_2020-04-05-13-23.ppm  chapter_9_2020-04-05-13-53.ppm  chapter_9_2020-04-05-14-24.ppm  chapter_9_2020-04-05-14-36.ppm  chapter_9_2020-04-05-14-43.ppm  chapter_9_2020-04-05-14-47.ppm  chapter_9_2020-04-05-15-04.ppm  firecanon2020-03-10-16-50.ppm  sphere_lighting2020-03-14-12-23.ppm  sphere_lighting2020-03-14-12-24.ppm  sphere_lighting2020-03-14-12-26.ppm  sphere_lighting2020-03-14-12-29.ppm  sphere_outline2020-03-14-11-46.ppm  sphere_outline2020-03-14-11-48.ppm  sphere_outline2020-03-14-12-12.ppm  sphere_outline2020-03-14-12-13.ppm  world_6_objects2020-03-15-09-13.ppm  world_6_objects2020-03-15-10-33.ppm  world_6_objects2020-03-15-10-35.ppm  world_6_objects2020-03-15-10-42.ppm  world_6_objects2020-03-15-10-47.ppm  world_6_objects2020-03-15-11-41.ppm  world_6_objects2020-03-15-15-36.ppm  world_6_objects2020-03-15-15-39.ppm  world_6_objects2020-03-15-15-48.ppm  world_6_objects2020-03-15-15-51.ppm  (+5 more)
src/: camera.rs  canvas.rs  (+25 more)
