[package]
name = "rust_ray_tracer_challenge"
version = "0.1.0"
authors = ["swiftaff <swiftaff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
uuid = { version = "0.8.1", features = ["v4"] }
read_input = "0.8"
image = "0.23.3"
last-git-commit = "0.2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false